# offboard_ibqr

./: CMakeLists.txt  README.md  package.xml
src/myTools/: TrajectoryPlots.m  TrajectorySpaceAnalysis.m  trajectory_logger.cpp
src/myTools/logs/: Reference_Trajectory.txt  Trajectory_Log_2021-08-04-18:15:28.txt  Trajectory_Log_2021-08-04-19:31:28.txt  Trajectory_Log_2021-08-04-20:59:17.txt  Trajectory_Log_2021-08-04-21:09:30.txt  Trajectory_Log_2021-08-04-21:13:13.txt  Trajectory_Log_2021-08-04-21:19:39.txt  Trajectory_Log_2021-08-04-21:23:52.txt  Trajectory_Log_2021-08-04-21:31:50.txt  Trajectory_Log_2021-08-25-16-34-44.txt  Trajectory_Log_2021-08-25-17-41-16.txt  Trajectory_Log_2021-08-25-17-50-26.txt  Trajectory_Log_2021-08-25-17-51-42.txt  Trajectory_Log_2021-08-26-12-51-52.txt  Trajectory_Log_2021-08-26-13-15-28.txt  Trajectory_Log_2021-08-26-15-09-29.txt  Trajectory_Log_2021-08-26-15-13-30.txt  Trajectory_Log_2021-08-26-16-31-23.txt  Trajectory_Log_2021-08-26-16-56-56.txt  Trajectory_Log_2021-08-26-17-06-21.txt  Trajectory_Log_2021-08-26-17-08-13.txt  Trajectory_Log_2021-08-26-17-14-19.txt  Trajectory_Log_2021-10-08-10-42-17.txt  Trajectory_Log_2021-10-08-10-46-38.txt  Trajectory_Log_2021-10-08-10-58-49.txt
src/myTools/utils/: getLogData.m  loadIndices.m  rearrange.m
src/offboard/: multi_offboard_control.cpp  offboard_control.cpp  offboard_tester.cpp
